<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="30dp">

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@drawable/arrow_bacc"
        android:clickable="true"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/language_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/quicksand_bold"
        android:gravity="center"
        android:text="@string/l_select_your_language"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/confirm_Btn"
        app:layout_constraintTop_toBottomOf="@+id/language_title">

        <TextView
            android:id="@+id/poland_Choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g_Poland"
            android:gravity="center"
            android:textSize="17sp"
            android:paddingVertical="7dp"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/quicksand_medium"
            />

        <TextView
            android:id="@+id/english_Choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g_English"
            android:gravity="center"
            android:textSize="17sp"
            android:paddingVertical="7dp"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/quicksand_medium"
            />

        <TextView
            android:id="@+id/german_Choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g_German"
            android:gravity="center"
            android:textSize="17sp"
            android:paddingVertical="7dp"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/quicksand_medium"/>

    </LinearLayout>


    <TextView
        android:id="@+id/confirm_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/g_confirm"
        android:textColor="@color/ashgrey"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>